Clean up packagesearch stuff
Remove redundant dependency
Fix warnings